--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,32 @@
+# macOS / Windows
 .DS_Store
 Thumbs.db
 
-#Secret Keys and Restricted
+# Environment variables and secrets
 .env
-README.md
+.env.local
+
+# Node modules and build output
+node_modules/
+dist/
+build/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+*.log
+
+# Coverage / test output
+coverage/
+.nyc_output/
+
+# Editor / IDE
+.vscode/
+.idea/
+*.suo
+*.user
+*.swp
+
+# Misc
+.cache/
