--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,10 @@
-# macOS / Windows
+# OS cache directories
 .DS_Store
 Thumbs.db
 
 # Environment variables and secrets
 .env
 .env.local
-
-# Node modules and build output
-node_modules/
-dist/
-build/
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-pnpm-debug.log*
-*.log
-
-# Coverage / test output
-coverage/
-.nyc_output/
 
 # Editor / IDE
 .vscode/
