--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "dependencies": {
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
-    "fs": "^0.0.1-security",
+    "fs": "0.0.1-security",
+    "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
-    "node-fetch": "^3.3.2",
     "path": "^0.12.7"
   }
 }
